--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,14 @@ body
     overflow: hidden;
 } */
 
+html,
+body
+{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 html{
     background-color: #1e1a20;
 }
